--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,19 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    font-family: 'Open Sans', 'Lato', sans-serif;
+a {
+    text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Lato', sans-serif;
+li {
+    list-style: none;
+}
+
+.center {
+    margin: auto;
+    text-align: center;
 }
