--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,9 @@ li {
 }
 
 .center {
-    margin: auto;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
 }
